# rust-python-demo

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt
dr_demo/: Cargo.toml
dr_demo/src/: lib.rs
py_typos/: Cargo.toml
py_typos/src/: lib.rs
python/: Demo.css  Demo.ipynb  Demo.slides.html
src/: bin.rs  lib.rs  main.rs
src/errors/: mod.rs
typo_checker/: Cargo.toml
typo_checker/src/: bin.rs  lib.rs  utils.rs
