[package]
name = "typocheker"
version = "0.1.0"
authors = ["a-hacker <austin.hacker@datarobot.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
fst = "0.3"
fst-levenshtein = "0.2"
itertools = "0.8.0"